src/app/components/projects/projects.component.scss
.projects-container {
    height: auto;
    background-color: #f7f7f7;
    overflow: hidden;
}

.grid-container-less {
    margin: 0 1em 0 1em;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
    grid-gap: 1em;
    @media only screen and (max-width: 750px) {
        margin: 0;
        grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
    }
}

.grid-container-more {
    margin: 0 1em 0 1em;
    display: grid;
    grid-template-columns: repeat(3, minmax(240px, 1fr));
    grid-gap: 1em;
    @media only screen and (max-width: 750px) {
        margin: 0;
        grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
    }
}

.slide-in {
    animation-name: slide-in;
    animation-duration: 1s;
}

.content {
    height: auto;
    margin-bottom: 1em;
}

.section-heading {
    font-size: 3em;
    font-weight: bold;
    display: block;
}

.project-card {
    background-color: transparent;
    width: 30em;
    height: 17em;
    perspective: 1000px;
}

.project-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

.project-card:hover .project-card-inner {
    transform: rotateY(180deg);
}

.project-card-front,
.project-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
}

.project-card-front {
    height: 100%;
    width: 100%;
}

.project-image {
    // background-image: url(../../../assets/images/some-project.jpg);
    background-size: 100% 100%;
    background-repeat: no-repeat;
    height: 100%;
}

.project-card-back {
    background-color: #9fc824;
    color: white;
    transform: rotateY(180deg);
}

.project-name {
    width: 40%;
    text-align: center;
    position: absolute;
    top: 89%;
    left: 20%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 2.5em;
    background-color: rgba(154, 199, 34, 0.5);
}

.project-title {
    word-break: break-all;
    display: block;
}

.back-card-title {
    display: block;
    word-break: break-all;
    margin-top: 2vh;
    font-size: 1.5em;
}

.back-description {
    display: block;
    word-break: break-all;
    margin-top: 2vh;
    font-size: 1.2em;
}

@keyframes slide-in {
    from {
        margin-right: 30%;
        opacity: 0;
    }
    to {
        margin-right: 0%;
    }
}

